--- a/Sesi 1.ipynb
+++ b/Sesi 1.ipynb
@@ -14,30 +14,7 @@
     "language_info": {
       "name": "python"
     },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "0002ca3678704e9086a2043cbed9009c": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_6b9dc7c3ad144f5682becc23980d4727",
-              "IPY_MODEL_86b2a96de3df43c5b4f82db2acb9fb18",
-              "IPY_MODEL_fe4f53c67caf4887a6cbd4e177bb1a45"
-            ],
-            "layout": "IPY_MODEL_1236d160521e445babf5ed68921f53ae"
-          }
-        },
+    "widgets": 
         "6b9dc7c3ad144f5682becc23980d4727": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
