--- a/Sesi 1.ipynb
+++ b/Sesi 1.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyM7mCYAbQes4ingz98Pb+id",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,7 +12,30 @@
     "language_info": {
       "name": "python"
     },
-    "widgets": 
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "0002ca3678704e9086a2043cbed9009c": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HBoxModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HBoxView",
+            "box_style": "",
+            "children": [
+              "IPY_MODEL_6b9dc7c3ad144f5682becc23980d4727",
+              "IPY_MODEL_86b2a96de3df43c5b4f82db2acb9fb18",
+              "IPY_MODEL_fe4f53c67caf4887a6cbd4e177bb1a45"
+            ],
+            "layout": "IPY_MODEL_1236d160521e445babf5ed68921f53ae"
+          }
+        },
         "6b9dc7c3ad144f5682becc23980d4727": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
@@ -681,16 +702,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/agungslapra/SQL-DQLab/blob/main/Sesi%201.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
