--- a/Sesi 1.ipynb
+++ b/Sesi 1.ipynb
@@ -13,6 +13,8 @@
       "name": "python"
     }
   },
+  "cells": [
+    {
       "cell_type": "code",
       "source": [
         "# Buat BigQuery client\n",
